--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,13 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://localhost:8081/repository/maven-releases/</url>
+	      <name>vasanth-relese</name>
+	      <url>http://13.232.175.161:8081/repository/flipkart-hostted/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://localhost:8081/repository/maven-snapshot/</url>
+	      <name>vasanth-snapshot</name>
+	      <url>http://13.232.175.161:8081/repository/flipkart-snapshot/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
